Adding specs for technicians and work orders.
