# worker_api/app/controllers/thecnicians_controller.rb
@@ -4,19 +4,17 @@ class ThecniciansController < ApplicationController
   # GET /thecnicians
   def index
     @thecnicians = Thecnician.all
-
-    render json: @thecnicians
+    render json: @thecnicians, include: :thecnician_phones
   end
 
   # GET /thecnicians/1
   def show
-    render json: @thecnician
+    render json: @thecnician, include: :thecnician_phones
   end
 
   # POST /thecnicians
   def create
     @thecnician = Thecnician.new(thecnician_params)
-
     if @thecnician.save
       render json: @thecnician, status: :created, location: @thecnician
     else
@@ -35,7 +33,7 @@ class ThecniciansController < ApplicationController
 
   # DELETE /thecnicians/1
   def destroy
-    @thecnician.destroy
+    @thecnician.update(status: false)
   end
 
   private
@@ -46,6 +44,6 @@ class ThecniciansController < ApplicationController
 
     # Only allow a list of trusted parameters through.
     def thecnician_params
-      params.require(:thecnician).permit(:name, :last_name, :mother_last_name, :birth_date, :sex, :email, :pic, :status)
+      params.require(:thecnician).permit(:name, :last_name, :mother_last_name, :birth_date, :sex, :email, :pic, :status, thecnician_phones_attributes: [:description, :number])
     end
 end
