# worker_api/app/models/thecnician.rb
@@ -1,5 +1,11 @@
 class Thecnician < ApplicationRecord
   has_many :thecnician_phones
-  has_many :phones, foreign_key: 'thecnician_phones_id', class_name: 'ThecnicianPhone'
   has_many :work_orders
+
+  accepts_nested_attributes_for :thecnician_phones
+  default_scope -> do
+    includes(:thecnician_phones)
+    .select(:id, :name, :last_name, :mother_last_name, :birth_date, :sex, :email)
+    .where(status: true)
+  end
 end
