# worker_api/app/models/thecnician_phone.rb
@@ -1,3 +1,4 @@
 class ThecnicianPhone < ApplicationRecord
   belongs_to :thecnician
+  default_scope ->{select(:id, :thecnician_id, :description, :number).where(status: true) }
 end
