# worker_api/swagger/swagger.yaml
@@ -66,7 +66,6 @@ paths:
                     type: string
                 required:
                 - id
-                - name
     put:
       summary: updates client data
       tags:
@@ -80,6 +79,395 @@ paths:
       responses:
         '200':
           description: client updated
+        '400':
+          description: invalid data
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              required:
+              - name
+  "/api/thecnicians":
+    get:
+      summary: Get a list of all thecnicians
+      tags:
+      - thecnicians
+      responses:
+        '200':
+          description: List found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  last_name:
+                    type: string
+                  mother_last_name:
+                    type: string
+                  birth_date:
+                    type: string
+                    format: date
+                  sex:
+                    type: boolean
+                  email:
+                    type: string
+                  thecnicians_phones:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        description:
+                          type: string
+                        number:
+                          type: string
+    post:
+      summary: Creates a thecnician
+      tags:
+      - thecnicians
+      parameters: []
+      responses:
+        '201':
+          description: thecnician created
+        '400':
+          description: invalid data
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  default: Jaime
+                last_name:
+                  type: string
+                  default: Jimenez
+                mother_last_name:
+                  type: string
+                  default: Juarez
+                birth_date:
+                  type: string
+                  format: date
+                sex:
+                  type: boolean
+                  default: false
+                email:
+                  type: string
+                  default: example@mail.com
+                thecnician_phones_attributes:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      description:
+                        type: string
+                        default: cel
+                      number:
+                        type: string
+                        default: '0123456789'
+              required:
+              - name
+  "/api/thecnicians/{id}":
+    get:
+      summary: find specific thecnician
+      tags:
+      - thecnicians
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: thecnician found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  last_name:
+                    type: string
+                  mother_last_name:
+                    type: string
+                  birth_date:
+                    type: string
+                    format: date
+                  sex:
+                    type: boolean
+                  email:
+                    type: string
+                  thecnicians_phones:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        description:
+                          type: string
+                        number:
+                          type: string
+                required:
+                - id
+    put:
+      summary: updates thecnician data
+      tags:
+      - thecnicians
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: thecnician updated
+        '400':
+          description: invalid data
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  default: Jaime
+                last_name:
+                  type: string
+                  default: Jimenez
+                mother_last_name:
+                  type: string
+                  default: Juarez
+                birth_date:
+                  type: string
+                  format: date
+                sex:
+                  type: boolean
+                  default: false
+                email:
+                  type: string
+                  default: example@mail.com
+                thecnician_phones_attributes:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      description:
+                        type: string
+                        default: cel
+                      number:
+                        type: string
+                        default: '0123456789'
+              required:
+              - id
+              - name
+              - last_name
+              - mother_last_name
+              - sex
+              - birth_date
+  "/api/work_orders/by_thecnician/{id}":
+    get:
+      summary: Get all work_orders from a technician
+      tags:
+      - work_orders
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Works listed for technician
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  begining_attention_date:
+                    type: string
+                    format: date_time
+                    description: Date when the technician starts the work.
+                  ending_attention_date:
+                    type: string
+                    format: date_time
+                    description: Date of ending work.
+                  status:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                    description: 'The current status of the work pending: 1, doing:
+                      2, paused: 3, done: 4, canceled: 5'
+                  thecnician_id:
+                    type: integer
+                  ticket:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      accident_date:
+                        type: date
+                        format: datetime
+                      client_branch_id:
+                        type: integer
+                      details:
+                        type: string
+                      work_order_id:
+                        type: integer
+                      client_branch:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          address:
+                            type: string
+                          email:
+                            type: string
+                          client:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                              name:
+                                type: string
+                  retainer:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      service_date:
+                        type: date
+                        format: datetime
+                      client_branch_id:
+                        type: integer
+                      work_order_id:
+                        type: integer
+                      client_branch:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          address:
+                            type: string
+                          email:
+                            type: string
+                          client:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                              name:
+                                type: string
+  "/api/work_orders":
+    get:
+      summary: Get a list of all work_orders
+      tags:
+      - work_orders
+      responses:
+        '200':
+          description: List found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  begining_attention_date:
+                    type: string
+                    format: date_time
+                    description: Date when the technician starts the work.
+                  ending_attention_date:
+                    type: string
+                    format: date_time
+                    description: Date of ending work.
+                  status:
+                    type: integer
+                    minimum: 1
+                    maximum: 5
+                    description: 'The current status of the work pending: 1, doing:
+                      2, paused: 3, done: 4, canceled: 5'
+                  thecnician_id:
+                    type: integer
+    post:
+      summary: Creates a work_order
+      tags:
+      - work_orders
+      parameters: []
+      responses:
+        '201':
+          description: work_order created
+        '400':
+          description: invalid data
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
+                  minimum: 1
+                  maximum: 5
+                  description: 'The current status of the work pending: 1, doing:
+                    2, paused: 3, done: 4, canceled: 5'
+                thecnician_id:
+                  type: integer
+              required:
+              - status
+              - thecnician_id
+  "/api/work_orders/{id}":
+    get:
+      summary: find specific work_order
+      tags:
+      - work_orders
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: work_order found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                required:
+                - id
+    put:
+      summary: updates work_order data
+      tags:
+      - work_orders
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: work_order updated
         '400':
           description: invalid data
       requestBody:
